demo/k8s-manifests/nginx-service.yml
apiVersion: v1
kind: Service
metadata:
  name: nginx-passenger
spec:
  selector:
    app: nginx-passenger
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: NodePort
