demo/k8s-manifests/nginx-ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: nginx-passenger-ingress
spec:
  backend:
    serviceName: nginx-passenger
    servicePort: 80
